# hector_robot

./: HectorRobot.i  MODULES  Makefile.am  NOTES  TODO  configure.ac  hector_robot.supp  reconf
java/: Makefile.am
lib/: LanguageTools.cc  LanguageTools.h  Makefile.am  NgramBloomFilter.h  ParsedUrl.cc  ParsedUrl.h  SitePathMD5.h  SuperFastHash.cc  SuperFastHash.h  curl.diff  curl.howto  googleurl.diff  googleurl.howto  robot_common.cc  robot_common.h  robot_common.i
lib/bloom/: BloomFilter.h  Makefile  NgramBloomFilter.h  bloom.cc  bloomb.cc  bloomt.cc  id2word.pl  word2id.pl
misc/: README  axfr.sh  dump.log.props  dump.sh  dump.xml  dump_url.sh  setenv.sh  time.pl
misc/language/: Language.xml  NOTES  evaluate.sh  languages.txt  prepare_data.sh
misc/language/language_data/: top_words.af  top_words.ar  top_words.az  top_words.be  top_words.bg  top_words.bn  top_words.ca  top_words.cs  top_words.cy  top_words.da  top_words.de  top_words.el  top_words.en  top_words.es  top_words.et  top_words.eu  top_words.fa  top_words.fi  top_words.fr  top_words.gl  top_words.he  top_words.hi  top_words.hr  top_words.hu  top_words.id  top_words.is  (+18 more)
misc/tagger/: TextTagger_cs.xml
misc/unaccented/: NOTES  Unaccented.xml  cssk_top_words.txt  threshold.R  threshold.sh  threshold.txt  threshold_tagged.sh
misc/web_corpus/: NOTES  Split.xml  WebCorpus.xml  cssk_top_words.txt  deduplicate.sh  deduplicate_all.xml  generate_split.pl  graph.R  graph.data  gzip2bzip.sh  language_count_global.pl  language_data  merge_syncs.pl  ngram.sh  ngram_compute.pl  ngram_compute.sh  ngram_merge.pl  ngram_merge.sh  parse.sh  shuffle_sentences.cc  split_sentences.pl  syncs_extract_pdt2.pl  syncs_merge.pl  tag.sh  vert2export.pl  vert2manatee.pl  vert_add_attrs.pl
module/: Deduplicate.cc  Deduplicate.h  Deduplicator.cc  Deduplicator.h  DetectLanguage.cc  DetectLanguage.h  DetectLanguageTable.cc  DetectLanguageTable.h  DnsResolver.cc  DnsResolver.h  ExtractUrl.cc  ExtractUrl.h  ExtractUrlLexer.cc  ExtractUrlLexer.l  FeaturamaTagger.cc  FeaturamaTagger.h  Fetch.cc  Fetch.h  Fetcher.h  Filter.h  FilterLanguage.cc  FilterLanguage.h  FilterLexer.l  FilterUnrecognized.cc  FilterUnrecognized.h  GeneratePageResource.cc  GeneratePageResource.h  LanguageCount.cc  LanguageCount.h  Makefile.am  MstParser.cc  MstParser.h  Normalize.cc  Normalize.h  PageResourceGenerator.cc  PageResourceGenerator.h  ParseMst.cc  ParseMst.h  PrintTextResource.cc  PrintTextResource.h  (+29 more)
module/perl/: CreateIndexResource.pm  CreatePageResource.pm  CreateTextResource.pm  DetectLanguageTable.pm  DetectLanguageTableTrain.pm  DetectNoAccents.pm  DetectNoAccentsTrain.pm  Fetch.pm  Fetcher.pm  FilterMissingAccents.pm  FilterMissingAccentsTrain.pm  FilterNewLinks.pm  FilterRobots.pm  FilterUnaccented.pm  FixRedirect.pm  HectorRobotCommon.pm  IdPrefixToStatus.pm  Makefile.am  NewLinkFilter.pm  PageResourceCreator.pm  ParseRobots.pm  PostFetch.pm  PreFetch.pm  ResolveDns.pm  RobotsFilter.pm  RobotsParser.pm  TextResourceCreator.pm  Unaccent.pm
modules/: ComposeUrl.cc  ComposeUrl.h  DnsResolver.cc  DnsResolver.h  FeaturamaTagger.cc  Fetch.cc  Fetch.h  Fetcher.cc  Fetcher.h  Filter.cc  Filter.h  FilterLexer.h  GenerateWebResource.cc  GenerateWebResource.h  Makefile.am  PageResourceGenerator.cc  ParseUrl.cc  ParseUrl.h  RawTextRead.cc  RawTextRead.h  ResolveDns.cc  ResolveDns.h  ResourceTypeToStatus.cc  ResourceTypeToStatus.h  Scheduler.cc  Scheduler.h  SiteManager.cc  SiteManager.h  TestInput.cc  TextResourcePrint.cc  TextResourcePrint.h  Tokenizer.cc  Tokenizer.h  Tokenizer_cs_CZ.cc  UpdateIndex.h  UpdateSites.h  UpdateUrls.cc  UpdateUrls.h  UrlComposer.cc  UrlComposer.h  (+11 more)
modules/perl/: CreateWebResource.pm  DnsResolver.pm  Download.pm  Fetch.pm  Fetcher.pm  Filter.pm  FixRedirect.pm  IndexResourceCreator.pm  Makefile.am  NewLinkFilter.pm  PageResourceCreator.pm  PostFetch.pm  PreFetch.pm  ResolveDns.pm  RobotsFilter.pm  RobotsParser.pm  TextResourceCreator.pm  WebResourceCreator.pm
old/: Scheduler.cc  Scheduler.h  WebResource.cc  WebResource.h  WebSiteManager.cc  WebSiteResource.cc  WebSiteResource.h  WebSiteResource.i
perl/: Makefile.am
python/: Makefile.am
resource/: IndexResource.cc  IndexResource.proto  Makefile.am  PageResource.cc  Scheme.i  SiteResource.cc  SiteResource.h  SiteResource.proto  TextResource.cc  TextResource.h  TextResource.i  TextResource.proto  UrlResource.cc  UrlResource.h  UrlResource.i  UrlResource.proto
resources/: IndexResource.cc  IndexResource.h  IndexResource.i  Makefile.am  NewUrlResource.cc  PageResource.cc  PageResource.h  PageResource.i  PageResource.proto  Scheme.h  Scheme.i  Scheme.proto  SiteResource.cc  SiteResource.i  TextResource.cc  TextResource.h  TextResource.i  TextResource.proto  UrlResource.cc  UrlResource.h  UrlResource.i  WebResource.cc  WebResource.h  WebResource.i  WebResource.proto  WebResourceWrapper.cc  WebResourceWrapper.h  WebSitePath.cc  WebSitePath.h  WebSiteResource.cc  WebSiteResource.h  WebSiteResource.i  WebSiteResource.proto  WebSiteResourceWrapper.cc  WebSiteResourceWrapper.h
robot/: TODO  convert.sh  convert.xml  dump.sh  dump.xml  filter.txt  robot.log.props  robot.sh  robot.xml  robot_common.sh  save_checkpoint.sh  start.sh  stop.sh  wait_for_finish.sh
servers/: Makefile.am  RobotServer.cc  RobotServer.h
test/: Makefile.am  common.sh  deduplicate.in  deduplicate.log.correct  deduplicate.sh  deduplicate.xml  deduplicate_para.hr  deduplicate_para.log.correct  deduplicate_para.sh  deduplicate_para.xml  deduplicator.log.correct  deduplicator.sh  deduplicator.xml  deduplicator_para.log.correct  deduplicator_para.sh  deduplicator_para.xml  detect_language.in  detect_language.log.correct  detect_language.sh  detect_language.xml  dns_server.pl  filter_unaccented.in  filter_unaccented.log.correct  filter_unaccented.sh  filter_unaccented.xml  http_server.pl  normalize.in  normalize.log.correct  normalize.sh  normalize.xml  robot.xml  test1-config.xml  test1.data.url  test1.log.correct  test1.sh  test10-config.xml  test10.log.correct  test10.sh  test10_config.xml  test11-config.xml  (+49 more)
(+5 files in other folders)
